# openvino-yolo-detection

./: .gitignore  README.md  gui_app.py  main.py  pyproject.toml  requirements.txt  traffic_light_console.py  traffic_light_raspberry.py  yolov26.py
scripts/: converter.ps1  downloader.ps1
